fix: enhance general translation